--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@
             </a>
         </p>
     </section>
+
+    <section>
         <h2>📂 <a href="https://github.com/gurraoptimus?tab=repositories">My Repositories</a></h2>
         <h3>Musician. / IT Developer. <a href="https://gurraoptimus.se/">Gurraoptimus Development</a></h3>
         <p>Follow me here on <a href="https://linktr.ee/gurraoptimus">linktr.ee</a></p>
+    </section>
+
     <footer>
         <p>&copy; Gurraoptimus Development All rights reserved.</p>
         <p>
