--- a/index.html
+++ b/index.html
@@ -7,53 +7,96 @@
     <title>Gurraoptimus Development</title>
     <link rel="shortcut icon" href="https://gurraoptimus.se/icon/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://gurraoptimus.se/css/stylesheet.css">
+    <style>
+        /* Add some basic styling for centering elements */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1, h2, h3 {
+            color: #333;
+        }
+
+        .content {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .social-icons img {
+            margin: 5px;
+        }
+
+        .badge-links img {
+            margin: 10px 5px;
+        }
+
+        footer {
+            margin-top: 40px;
+            font-size: 14px;
+            color: #777;
+        }
+
+        footer a {
+            text-decoration: none;
+            color: inherit;
+        }
+
+        .links-section {
+            margin-top: 30px;
+        }
+    </style>
 </head>
 
 <body>
     <header>
-        <h1 align="center">Gurraoptimus Development</h1>
+        <h1>Gurraoptimus Development</h1>
     </header>
 
-    <section align="center">
-        <h6>
-            <a href="https://git.io/streak-stats">
-                <img src="https://streak-stats.demolab.com?user=gurraoptimus&theme=violet-punch&mode=weekly&card_width=493&card_height=194" alt="GitHub Streak" />
-            </a>
-        </h6>
+    <section class="content">
+        <div class="social-icons">
+            <h6>
+                <a href="https://git.io/streak-stats">
+                    <img src="https://streak-stats.demolab.com?user=gurraoptimus&theme=violet-punch&mode=weekly&card_width=493&card_height=194" alt="GitHub Streak" />
+                </a>
+            </h6>
 
-        <p>
-            <img src="https://gh-readme-profile.vercel.app/api?username=gurraoptimus&count&border_width=0&border_radius=15.2&hide_border=true&theme=merko" alt="gh-readme-profile" />
-        </p>
+            <p>
+                <img src="https://gh-readme-profile.vercel.app/api?username=gurraoptimus&count&border_width=0&border_radius=15.2&hide_border=true&theme=merko" alt="gh-readme-profile" />
+            </p>
 
-        <p>
-            <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=gurraoptimus&layout=compact&theme=merko" alt="github-readme-stats" />
-        </p>
+            <p>
+                <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=gurraoptimus&layout=compact&theme=merko" alt="github-readme-stats" />
+            </p>
 
-        <h6>
-            <img src="https://count.getloli.com/@gurraoptimus?name=gurraoptimus&theme=booru-rule34&padding=5&offset=0&align=center&scale=1&pixelated=1&darkmode=auto" alt="count getloli" />
-        </h6>
+            <h6>
+                <img src="https://count.getloli.com/@gurraoptimus?name=gurraoptimus&theme=booru-rule34&padding=5&offset=0&align=center&scale=1&pixelated=1&darkmode=auto" alt="count getloli" />
+            </h6>
 
-        <p>
-            <a href="https://spotify-github-profile.kittinanx.com/api/view?uid=gurra_optimus&redirect=true">
-                <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view.svg?uid=gurra_optimus&cover_image=true&theme=default&show_offline=true&background_color=00000&interchange=false&bar_color=9e10ea&bar_color_cover=True"/>
-            </a>
-        </p>
+            <p>
+                <a href="https://spotify-github-profile.kittinanx.com/api/view?uid=gurra_optimus&redirect=true">
+                    <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view.svg?uid=gurra_optimus&cover_image=true&theme=default&show_offline=false&background_color=00000&interchange=false&bar_color=9e10ea&bar_color_cover=True"/>
+                </a>
+            </p>
 
-        <h6 align="center">
-            <a href="https://gurraoptimus.se/">
-                <img align="center" alt="gurraoptimus" width="55px" src="https://gurraoptimus.se/icon/favicon.ico" />
-            </a>
-        </h6>
+            <h6>
+                <a href="https://gurraoptimus.se/">
+                    <img align="center" alt="gurraoptimus" width="55px" src="https://gurraoptimus.se/icon/favicon.ico" />
+                </a>
+            </h6>
+        </div>
     </section>
 
-    <section align="center">
+    <section class="content badge-links">
         <p>
             <a href="https://www.twitch.tv/anoshyguyyt" target="_blank" rel="noreferrer">
                 <img src="https://img.shields.io/twitch/status/anoshyguyyt?logo=twitchsx&style=for-the-badge&color=0891b2&labelColor=1c1917&label=TWITCH+STATUS" />
             </a>
-        </p>
 
-        <p>
             <a href="https://github.com/gurraoptimus" target="_blank">
                 <img src="https://img.shields.io/badge/GitHub-%23181717.svg?&style=for-the-badge&logo=github&logoColor=white" alt="GitHub Profile" style="margin-bottom: 5px;" />
             </a>
@@ -72,7 +115,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="content links-section">
         <h2>📂 <a href="https://github.com/gurraoptimus?tab=repositories">My Repositories</a></h2>
         <h3>Musician. / IT Developer. <a href="https://gurraoptimus.se/">Gurraoptimus Development</a></h3>
         <p>Follow me here on <a href="https://linktr.ee/gurraoptimus">linktr.ee</a></p>
