--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
         <h2>📂 <a href="https://github.com/gurraoptimus?tab=repositories">My Repositories</a></h2>
         <h3>Musician. / IT Developer. <a href="https://gurraoptimus.se/">Gurraoptimus Development</a></h3>
         <p>Follow me here on <a href="https://linktr.ee/gurraoptimus">linktr.ee</a></p>
-    <footer>
+    </section>
+
+    <!-- Updated footer with 'content links-section' class -->
+    <footer class="content links-section">
         <p>&copy; Gurraoptimus Development All rights reserved.</p>
         <p>
             <a href="https://github.com/gurraoptimus/gurraoptimus/blob/main/LICENSE">
@@ -127,7 +130,6 @@
             </a>
         </p>
     </footer>
-</section>
 </body>
 
 </html>
