--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
         <h3>Musician. / IT Developer. <a href="https://gurraoptimus.se/">Gurraoptimus Development</a></h3>
         <p>Follow me here on <a href="https://linktr.ee/gurraoptimus">linktr.ee</a></p>
     </section>
-
-    <!-- Updated footer with 'content links-section' class -->
-    <footer class="content links-section">
+    
+    <section class="content links-section">
+    <footer>
         <p>&copy; Gurraoptimus Development All rights reserved.</p>
         <p>
             <a href="https://github.com/gurraoptimus/gurraoptimus/blob/main/LICENSE">
@@ -130,6 +130,7 @@
             </a>
         </p>
     </footer>
+</section>
 </body>
 
 </html>
