--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
                 <img src="https://img.shields.io/badge/youtube-%23EE4831.svg?&style=for-the-badge&logo=youtube&logoColor=white" alt="youtube" />
             </a>
         </p>
+    </section class="social-icons">
+
     <!-- Footer -->
     <footer>
         <p>&copy; Gurraoptimus Development All rights reserved.</p>
