--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <img src="https://img.shields.io/badge/youtube-%23EE4831.svg?&style=for-the-badge&logo=youtube&logoColor=white" alt="youtube" />
             </a>
         </p>
-    </section class="content">
+    </section class="content badge-links">
 
     <!-- Footer -->
     <footer>
