--- a/index.html
+++ b/index.html
@@ -46,18 +46,13 @@
             text-decoration: none;
         }
 
-        .social-icons img,
+        /* Styling for the badge links inside the footer */
         .badge-links img {
             margin: 5px;
         }
 
-        /* Ensure the content section is properly spaced */
         .badge-links {
-            margin-top: 20px;
-        }
-
-        .badge-links img {
-            margin: 5px;
+            margin-top: 10px;
         }
 
         .social-icons {
@@ -67,7 +62,6 @@
         .social-icons img {
             margin: 5px;
         }
-
     </style>
 </head>
 
@@ -79,7 +73,7 @@
     <!-- Main content -->
     <section class="content">
         <div class="social-icons">
-           <!--<h6>
+            <h6>
                 <a href="https://git.io/streak-stats">
                     <img src="https://streak-stats.demolab.com?user=gurraoptimus&theme=violet-punch&mode=weekly&card_width=493&card_height=194" alt="GitHub Streak" />
                 </a>
@@ -91,7 +85,7 @@
 
             <p>
                 <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=gurraoptimus&layout=compact&theme=merko" alt="github-readme-stats" />
-            </p>-->
+            </p>
 
             <h6>
                 <img src="https://count.getloli.com/@gurraoptimus?name=gurraoptimus&theme=booru-rule34&padding=5&offset=0&align=center&scale=1&pixelated=1&darkmode=auto" alt="count getloli" />
@@ -111,34 +105,35 @@
         </div>
     </section>
 
-    <!-- Badge links section -->
-    <section class="content badge-links">
-        <p>
-            <a href="https://www.twitch.tv/anoshyguyyt" target="_blank" rel="noreferrer">
-                <img src="https://img.shields.io/twitch/status/anoshyguyyt?logo=twitchsx&style=for-the-badge&color=0891b2&labelColor=1c1917&label=TWITCH+STATUS" />
-            </a>
-
-            <a href="https://github.com/gurraoptimus" target="_blank">
-                <img src="https://img.shields.io/badge/GitHub-%23181717.svg?&style=for-the-badge&logo=github&logoColor=white" alt="GitHub Profile" />
-            </a>
-
-            <a href="https://x.com/gurraoptimus" target="_blank">
-                <img src="https://img.shields.io/badge/X-%3000000.svg?&style=for-the-badge&logo=x&logoColor=white" alt="osi" />
-            </a>
-
-            <a href="https://instagram.com/DinoRainbowGirlMusic">
-                <img src="https://img.shields.io/badge/instagram-%23000000.svg?&style=for-the-badge&logo=instagram&logoColor=white" alt="instagram" />
-            </a>
-
-            <a href="https://www.youtube.com/@anoshyguy">
-                <img src="https://img.shields.io/badge/youtube-%23EE4831.svg?&style=for-the-badge&logo=youtube&logoColor=white" alt="youtube" />
-            </a>
-        </p>
-    </section class="content badge-links">
-
     <!-- Footer -->
     <footer>
         <p>&copy; Gurraoptimus Development All rights reserved.</p>
+        
+        <!-- Social Media Badge Links Section inside Footer -->
+        <section class="badge-links">
+            <p>
+                <a href="https://www.twitch.tv/anoshyguyyt" target="_blank" rel="noreferrer">
+                    <img src="https://img.shields.io/twitch/status/anoshyguyyt?logo=twitchsx&style=for-the-badge&color=0891b2&labelColor=1c1917&label=TWITCH+STATUS" />
+                </a>
+
+                <a href="https://github.com/gurraoptimus" target="_blank">
+                    <img src="https://img.shields.io/badge/GitHub-%23181717.svg?&style=for-the-badge&logo=github&logoColor=white" alt="GitHub Profile" />
+                </a>
+
+                <a href="https://x.com/gurraoptimus" target="_blank">
+                    <img src="https://img.shields.io/badge/X-%3000000.svg?&style=for-the-badge&logo=x&logoColor=white" alt="osi" />
+                </a>
+
+                <a href="https://instagram.com/DinoRainbowGirlMusic">
+                    <img src="https://img.shields.io/badge/instagram-%23000000.svg?&style=for-the-badge&logo=instagram&logoColor=white" alt="instagram" />
+                </a>
+
+                <a href="https://www.youtube.com/@anoshyguy">
+                    <img src="https://img.shields.io/badge/youtube-%23EE4831.svg?&style=for-the-badge&logo=youtube&logoColor=white" alt="youtube" />
+                </a>
+            </p>
+        </section>
+
         <p>
             <a href="https://github.com/gurraoptimus/gurraoptimus/blob/main/LICENSE">
                 <img src="https://img.shields.io/github/license/gurraoptimus/gurraoptimus.svg?-style=flat-square" alt="GPL-3.0 License" />
