--- a/index.html
+++ b/index.html
@@ -135,11 +135,12 @@
                     <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view.svg?uid=gurra_optimus&cover_image=true&theme=default&show_offline=false&background_color=00000&interchange=false&bar_color=9e10ea&bar_color_cover=True"/>
                 </a>
             </p>
+    </section>
 
     <!-- Footer -->
     <footer>
         <p>&copy; Gurraoptimus Development All rights reserved.</p>
-        
+
         <!-- Social Media Badge Links Section inside Footer -->
         <section class="badge-links">
             <p>
@@ -170,13 +171,16 @@
                 <img src="https://img.shields.io/github/license/gurraoptimus/gurraoptimus.svg?-style=flat-square" alt="GPL-3.0 License" />
             </a>
         </p>
+
+        <!-- Footer Logo -->
         <h6>
             <a href="https://gurraoptimus.se/">
                 <img align="center" alt="gurraoptimus" width="55px" src="https://gurraoptimus.se/icon/favicon.ico" />
             </a>
         </h6>
     </div>
-</section>
+        </div>
+    </footer>
 </body>
 
 </html>
