--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             background-color: #222;
             color: white;
             text-align: center;
-            padding: 20px;
-            font-size: 14px;
+            padding: 15px 20px; /* Adjusted padding for a more compact footer */
+            font-size: 12px; /* Smaller font size for footer */
             margin-top: auto; /* This pushes the footer down when there's little content */
         }
 
@@ -50,25 +50,27 @@
         /* Styling for the badge links inside the footer */
         .badge-links img {
             margin: 5px;
-            max-width: 100px;
+            max-width: 80px; /* Slightly reduced size of the badges for a cleaner look */
         }
 
         .badge-links {
             margin-top: 10px;
+            text-align: center; /* Center the badges */
         }
 
         /* Social icons */
         .social-icons {
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
 
         .social-icons img {
             margin: 5px;
+            max-width: 50px; /* Smaller icons for better spacing */
         }
 
         /* Logo in footer */
         footer .footer-logo img {
-            max-width: 150px;
+            max-width: 120px; /* Adjusted size for the logo */
             margin-top: 10px;
         }
 
@@ -84,12 +86,12 @@
 
             .badge-links img {
                 margin: 8px;
-                max-width: 80px;
+                max-width: 70px;
             }
 
             footer {
-                font-size: 12px;
-                padding: 15px;
+                font-size: 11px;
+                padding: 10px;
             }
 
             footer p {
@@ -97,7 +99,7 @@
             }
 
             footer .footer-logo img {
-                max-width: 120px;
+                max-width: 100px;
             }
         }
 
@@ -108,11 +110,11 @@
             }
 
             .badge-links img {
-                max-width: 70px;
+                max-width: 60px;
             }
 
             footer .footer-logo img {
-                max-width: 100px;
+                max-width: 90px;
             }
         }
     </style>
@@ -134,8 +136,8 @@
                     <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view.svg?uid=gurra_optimus&cover_image=true&theme=default&show_offline=false&background_color=00000&interchange=false&bar_color=9e10ea&bar_color_cover=True"/>
                 </a>
             </p>
-    </h6>
-</section>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer>
@@ -146,11 +148,9 @@
                 <img align="center" alt="gurraoptimus" width="55px" src="https://gurraoptimus.se/icon/favicon.ico" />
             </a>
         </h6>
-    </div>
-        </div>
-        
+
+        <!-- Footer Text -->
         <p>&copy; Gurraoptimus Development All rights reserved.</p>
-        
 
         <!-- Social Media Badge Links Section inside Footer -->
         <section class="badge-links">
