--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             background-color: #222;
             color: white;
             text-align: center;
-            padding: 15px 20px; /* Adjusted padding for a more compact footer */
-            font-size: 12px; /* Smaller font size for footer */
-            margin-top: auto; /* This pushes the footer down when there's little content */
+            padding: 15px 20px;
+            font-size: 14px;
+            margin-top: auto;
         }
 
         footer a {
@@ -50,27 +50,28 @@
         /* Styling for the badge links inside the footer */
         .badge-links img {
             margin: 5px;
-            max-width: 80px; /* Slightly reduced size of the badges for a cleaner look */
+            max-width: 100px;
         }
 
         .badge-links {
             margin-top: 10px;
-            text-align: center; /* Center the badges */
+            text-align: center;
         }
 
         /* Social icons */
         .social-icons {
-            margin-bottom: 10px;
+            margin-bottom: 20px;
+            text-align: center;
         }
 
         .social-icons img {
-            margin: 5px;
-            max-width: 50px; /* Smaller icons for better spacing */
+            margin: 10px;
+            max-width: 50px;
         }
 
         /* Logo in footer */
         footer .footer-logo img {
-            max-width: 120px; /* Adjusted size for the logo */
+            max-width: 120px;
             margin-top: 10px;
         }
 
@@ -80,18 +81,14 @@
                 padding: 15px;
             }
 
-            .badge-links {
-                text-align: center;
-            }
-
             .badge-links img {
+                max-width: 80px;
                 margin: 8px;
-                max-width: 70px;
             }
 
             footer {
-                font-size: 11px;
-                padding: 10px;
+                font-size: 12px;
+                padding: 15px;
             }
 
             footer p {
@@ -103,14 +100,14 @@
             }
         }
 
-        /* Extra small devices (phones in portrait mode) */
         @media (max-width: 480px) {
             header h1 {
                 font-size: 1.5em;
             }
 
             .badge-links img {
-                max-width: 60px;
+                max-width: 70px;
+                margin: 8px;
             }
 
             footer .footer-logo img {
@@ -128,10 +125,11 @@
     <!-- Main content -->
     <section class="content">
         <div class="social-icons">
-            <h6 align="center">
+            <h6>
                 <img src="https://count.getloli.com/@gurraoptimus?name=gurraoptimus&theme=booru-rule34&padding=5&offset=0&align=center&scale=1&pixelated=1&darkmode=auto" alt="count getloli" />
-                
-            <p align="center">
+            </h6>
+            
+            <p>
                 <a href="https://spotify-github-profile.kittinanx.com/api/view?uid=gurra_optimus&redirect=true">
                     <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view.svg?uid=gurra_optimus&cover_image=true&theme=default&show_offline=false&background_color=00000&interchange=false&bar_color=9e10ea&bar_color_cover=True"/>
                 </a>
@@ -149,8 +147,7 @@
             </a>
         </h6>
 
-        <!-- Footer Text -->
-        <p>&copy; Gurraoptimus Development All rights reserved.</p>
+        <p>&copy; Gurraoptimus Development. All rights reserved.</p>
 
         <!-- Social Media Badge Links Section inside Footer -->
         <section class="badge-links">
