--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
     <!-- Main content -->
     <section class="content">
         <div class="social-icons">
-            <h6>
+            <h6 align="margin-center">
                 <img src="https://count.getloli.com/@gurraoptimus?name=gurraoptimus&theme=booru-rule34&padding=5&offset=0&align=center&scale=1&pixelated=1&darkmode=auto" alt="count getloli" />
             </h6>
             
-            <p>
+            <p align="top-center">
                 <a href="https://spotify-github-profile.kittinanx.com/api/view?uid=gurra_optimus&redirect=true">
                     <img title="spotify-github-profile" alt="spotify" src="https://spotify-github-profile.kittinanx.com/api/view.svg?uid=gurra_optimus&cover_image=true&theme=default&show_offline=false&background_color=00000&interchange=false&bar_color=9e10ea&bar_color_cover=True"/>
                 </a>
@@ -141,7 +141,11 @@
                 <img align="center" alt="gurraoptimus" width="55px" src="https://gurraoptimus.se/icon/favicon.ico" />
             </a>
         </h6>
-
+        <p>
+            <a href="https://github.com/gurraoptimus/gurraoptimus/blob/main/LICENSE">
+                <img src="https://img.shields.io/github/license/gurraoptimus/gurraoptimus.svg?-style=flat-square" alt="GPL-3.0 License" />
+            </a>
+        </p>
         <p>&copy; Gurraoptimus Development. All rights reserved.</p>
 
         <!-- Social Media Badge Links Section inside Footer -->
@@ -168,12 +172,6 @@
                 </a>
             </p>
         </section>
-
-        <p>
-            <a href="https://github.com/gurraoptimus/gurraoptimus/blob/main/LICENSE">
-                <img src="https://img.shields.io/github/license/gurraoptimus/gurraoptimus.svg?-style=flat-square" alt="GPL-3.0 License" />
-            </a>
-        </p>
 
     </footer>
 </body>
