--- a/index.html
+++ b/index.html
@@ -127,8 +127,10 @@
                 </a>
             </p>
         </div>
-        
-        <img src="https://count.getloli.com/@gurraoptimus?name=gurraoptimus&theme=booru-rule34&padding=5&offset=0&align=center&scale=1&pixelated=1&darkmode=auto" alt="count getloli" />
+            <p align="bottom-center">
+                <img src="https://count.getloli.com/@gurraoptimus?name=gurraoptimus&theme=booru-rule34&padding=5&offset=0&align=center&scale=1&pixelated=1&darkmode=auto" alt="count getloli" />
+            </p>
+        </div>
     </h6>
     </section>
 
