--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
                 </a>
             </p>
         </div>
-            <p align="bottom-center">
+        <section class="content">
+            <div class="social-icons">
+            <p align="margin-top">
                 <img src="https://count.getloli.com/@gurraoptimus?name=gurraoptimus&theme=booru-rule34&padding=5&offset=0&align=center&scale=1&pixelated=1&darkmode=auto" alt="count getloli" />
             </p>
         </div>
